Fixed compatibility with new macOS, updated to 6.0 aapt (+ changes to make it work) so that new apks work (7.x aapts have bugged labels), changed output layout slightly, added SDK/target SDK display, fixed icon being attempted to be shown when there is none

--- a/QuickLookAPK/QuickLookAPK-Info.plist
+++ b/QuickLookAPK/QuickLookAPK-Info.plist
@@ -11,7 +11,7 @@
 			<string>QLGenerator</string>
 			<key>LSItemContentTypes</key>
 			<array>
-				<string>dyn.ah62d4rv4ge80c6dp</string>
+				<string>com.android.package-archive</string>
 			</array>
 		</dict>
 	</array>
