Update project info;Update aapt to 28.0.1 with 64bit;Add original apk DocumentContentType;

--- a/QuickLookAPK/QuickLookAPK-Info.plist
+++ b/QuickLookAPK/QuickLookAPK-Info.plist
@@ -11,6 +11,7 @@
 			<string>QLGenerator</string>
 			<key>LSItemContentTypes</key>
 			<array>
+				<string>dyn.ah62d4rv4ge80c6dp</string>
 				<string>com.android.package-archive</string>
 			</array>
 		</dict>
@@ -20,7 +21,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.hezicohen.qlapk</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
